CHEUCKING THE DIRECTORY OF THE USER IMAGE, IF ITS CORRECT

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p class="content">These languages are the backbone of every website, defining structure, content, and presentation.
     </p>
     <div class="user">
-      <img src="/assets/images/image-avatar.webp" alt="User Image">
+      <img src="./assets/images/image-avatar.webp" alt="User Image">
       <h2>Greg Hooper</h2>
     </div>
   </main>
