Update attribution link and increase main container height to 77vh

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Ismail Jimoh</a>.
+    Coded by <a href="https://github.com/smileywrld/" target="_blank">Ismail Jimoh</a>.
   </div>
 </body>
 
